--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 remote_theme: pmarsceill/just-the-docs
+name: RocketSockets Documentation
+description: Documentation for https://rocketsockets.network
