--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pmarsceill/just-the-docs
-name: RocketSockets Documentation
+title: RocketSockets Documentation
 description: Documentation for https://rocketsockets.network
