--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 remote_theme: pmarsceill/just-the-docs
 title: RocketSockets Documentation
 description: Documentation for https://rocketsockets.network
+color_scheme: "dark"
